# lightAI

./: CMakeLists.txt
core/: layer.cpp  layer.hpp  lightAI.cpp  lightAI.hpp
utils/: activations.hpp  onlineNormalizer.hpp  windowBuffer.hpp
